--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Save Webcam Image
+name: Save Cogne Webcam Images
 
 on:
   schedule:
@@ -16,58 +16,30 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Scarica immagine webcam
+      - name: Scarica immagine webcam Cogne
         run: |
-          mkdir -p webcam
+          set -e
+          mkdir -p webcam_cogne
+
           ts=$(date +"%Y-%m-%d_%H-%M")
           img_url="https://www.lovevda.it/Media/LovevdaResp/Cache/Webcam/big_cogne.jpg"
-          img_path="webcam/webcam_${ts}.jpg"
+          img_path="webcam_cogne/webcam_${ts}.jpg"
 
-          echo "Scaricando immagine da $img_url"
-          curl -L -o "$img_path" "$img_url" || { echo "Errore nel download"; exit 1; }
+          echo "Scaricando $img_url"
+          curl -L -o "$img_path" "$img_url"
           echo "Immagine salvata in $img_path"
 
-      - name: Crea o aggiorna file ZIP mensile
+      - name: Crea o aggiorna ZIP mensile (max 100MB)
         run: |
-          zip_file="webcam_images_$(date +"%Y-%m").zip"
-          echo "zip_file=$zip_file" >> $GITHUB_ENV   # ↩️ rende il nome disponibile allo step successivo
+          set -e
 
-          echo "Verificando la cartella webcam..."
-          if [ "$(ls -A webcam)" ]; then
-            echo "Immagini trovate. Aggiorno: $zip_file"
+          MONTH=$(date +"%Y-%m")
+          BASE_NAME="cogne_${MONTH}"
+          MAX_SIZE=$((95 * 1024 * 1024)) # 95 MB margine sicurezza
 
-            # crea il file ZIP se non esiste
-            if [ ! -f "$zip_file" ]; then
-              zip -r "$zip_file" webcam/
-            else
-              # aggiunge solo nuovi file evitando di includere altri zip
-              zip -u "$zip_file" webcam/*.jpg
-            fi
-          else
-            echo "Nessuna immagine trovata da aggiungere."
-          fi
+          LAST_PART=$(ls ${BASE_NAME}_part*.zip 2>/dev/null | sort | tail -n 1)
 
-      - name: Commit & Push ZIP aggiornato
-        run: |
-          echo "Configurazione Git..."
-          git config user.email "actions@github.com"
-          git config user.name "GitHub Actions"
-
-          zip_file="$zip_file"   # recupera dal GITHUB_ENV
-
-          if [ ! -f "$zip_file" ]; then
-            echo "Nessun file ZIP da aggiungere."
-            exit 0
-          fi
-
-          git add "$zip_file"
-
-          # controlla se ci sono cambiamenti da committare
-          if git diff --cached --quiet; then
-            echo "Nessuna modifica da commettere."
-            exit 0
-          else
-            echo "Modifiche trovate. Eseguo commit e push..."
-            git commit -m "Aggiornamento immagini webcam - mese $(date +"%Y-%m")"
-            git push
-          fi
+          if [ -z "$LAST_PART" ]; then
+            PART=1
+            ZIP_FILE="${BASE_NAME}_part${PART}.zip"
+            echo "C
