--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,8 +1,8 @@
-name: Save Webcam Image
+name: Save Webcam Image - Cogne
 
 on:
   schedule:
-    - cron: "*/60 * * * *" # Ogni 60 minuti
+    - cron: "*/60 * * * *" # Ogni 60 minuti (UTC)
   workflow_dispatch:
 
 permissions:
@@ -16,6 +16,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Imposta fuso orario italiano
+        run: |
+          echo "TZ=Europe/Rome" >> $GITHUB_ENV
+
       - name: Scarica immagine webcam
         run: |
           set -e
@@ -26,10 +30,10 @@ jobs:
           img_path="webcam/webcam_${ts}.jpg"
 
           echo "Scaricando immagine da $img_url"
-          curl -L -o "$img_path" "$img_url"
+          curl -L --fail -o "$img_path" "$img_url"
           echo "Immagine salvata in $img_path"
 
-      - name: Crea o aggiorna ZIP mensile (max 100MB)
+      - name: Crea o aggiorna ZIP mensile (max 100MB) e pulizia
         run: |
           set -e
 
@@ -37,7 +41,13 @@ jobs:
           BASE_NAME="webcam_images_${MONTH}"
           MAX_SIZE=$((80 * 1024 * 1024)) # 80 MB di margine
 
-          # trova ultimo ZIP del mese
+          # Verifica se ci sono immagini da zippare
+          if ! ls webcam/*.jpg >/dev/null 2>&1; then
+            echo "Nessuna immagine da zippare"
+            exit 0
+          fi
+
+          # Trova ultimo ZIP del mese
           LAST_PART=$(ls ${BASE_NAME}_part*.zip 2>/dev/null | sort | tail -n 1)
 
           if [ -z "$LAST_PART" ]; then
@@ -61,6 +71,9 @@ jobs:
             fi
           fi
 
+          echo "Pulizia immagini webcam..."
+          rm -f webcam/*.jpg
+
           echo "Operazione completata: $ZIP_FILE"
 
       - name: Commit & push changes
@@ -69,7 +82,5 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
           git add .
-          git commit -m "Aggiornamento immagini webcam $(date +"%Y-%m-%d %H:%M")" || echo "Nessuna modifica da commitare"
+          git commit -m "Aggiornamento immagini webcam Cogne $(date +"%Y-%m-%d %H:%M")" || echo "Nessuna modifica da commitare"
           git push
-
-
